Experiment with unique IDs

--- a/openCvPractice/detectCars.ipynb
+++ b/openCvPractice/detectCars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "    # Detect cars in the frame\n",
-    "    cars = car_cascade.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=2, minSize=(20, 20))\n",
+    "    cars = car_cascade.detectMultiScale(gray, scaleFactor=1.05, minNeighbors=3, minSize=(40, 40), maxSize=(150,150))\n",
     "    \n",
     "    # Draw bounding boxes around the detected cars\n",
     "    for i, (x, y, w, h) in enumerate(cars):\n",
