Own video and some unique ID improvements

--- a/openCvPractice/detectCars.ipynb
+++ b/openCvPractice/detectCars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "\n",
     "# Open the video file\n",
     "#cap = cv2.VideoCapture('cars.mp4')\n",
-    "cap = cv2.VideoCapture('MWay_traffic.wmv')\n",
+    "#cap = cv2.VideoCapture('MWay_traffic.wmv')\n",
+    "cap = cv2.VideoCapture('eghamCarsPeople.mp4')\n",
     "\n",
     "# Define the colors for the boxes\n",
     "    #colours = [(0, 0, 255), (0, 255, 0), (255, 0, 0)] #RGB\n",
