--- a/openCvPractice/detectCarsExperimental.ipynb
+++ b/openCvPractice/detectCarsExperimental.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "\n",
     "# Open the video file\n",
     "#cap = cv2.VideoCapture('cars.mp4')\n",
-    "cap = cv2.VideoCapture('MWay_traffic.wmv')\n",
+    "#cap = cv2.VideoCapture('MWay_traffic.wmv')\n",
+    "cap = cv2.VideoCapture('eghamCarsPeople.mp4')\n",
     "\n",
     "# Define the colors for the boxes\n",
     "colours = [(255, 0, 0), (0, 255, 0), (0, 0, 255), (255, 255, 0), (0, 255, 255), (255, 0, 255), (128, 0, 0), \n",
@@ -24,8 +25,8 @@
     "# Dictionary to keep track of cars and their IDs\n",
     "car_dict = {}\n",
     "\n",
-    "# Define the threshold distance to match cars between frames\n",
-    "match_threshold = 50\n",
+    "# Define the threshold distance to match cars between frames, 67 seems to work in some cases\n",
+    "match_threshold = 65\n",
     "\n",
     "while True:\n",
     "    # Read a frame from the video\n",
@@ -39,7 +40,7 @@
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "    # Detect cars in the frame\n",
-    "    cars = car_cascade.detectMultiScale(gray, scaleFactor=1.1, minNeighbors=2, minSize=(20, 20))\n",
+    "    cars = car_cascade.detectMultiScale(gray, scaleFactor=1.09, minNeighbors=1, minSize=(35, 38), maxSize=(100, 100))\n",
     "    \n",
     "    # Dictionary to keep track of matched cars in the current frame\n",
     "    matched_cars = {}\n",
